# lasy_pomorza

./: .gitignore  .gitmodules  CMakeLists.txt  Project1.sln
Project1/: Project1.vcxproj  Project1.vcxproj.filters  buffer.h  device.h  error.cpp  error.h  graphics_interface.cpp  graphics_interface.h  input_assembler.h  mesh.h  render_target.h  shader.h  swapchain.h  vertex.h  window.cpp  window.h
cmake/: update_git_submodules.cmake
d3d_app/: cube_model.h  d3d_app.vcxproj  d3d_app.vcxproj.filters  device_resources.cpp  device_resources.h  framework_window.cpp  main.cpp  renderer.cpp  renderer.h  simple_pixel_shader.hlsl  simple_vertex_shader.hlsl
examples/: CMakeLists.txt
examples/logging_check/: CMakeLists.txt  main.cpp
examples/simple_triangle/: CMakeLists.txt
examples/simple_triangle/resources/shaders/: simple_pixel_shader.hlsl  simple_vertex_shader.hlsl
examples/simple_triangle/src/: CMakeLists.txt  device_resources.cpp  device_resources.h  framework_entry.h  framework_window.cpp  framework_window.h  main.cpp  renderer.cpp
src/: CMakeLists.txt
src/logging/: CMakeLists.txt  logging.cpp  logging.hpp  logging_interface.hpp  logging_loguru.cpp  logging_loguru.hpp  logging_stdio.cpp  logging_stdio.hpp
src/logging/include/: logging.hpp
src/logging/src/: logging.cpp  logging_loguru.hpp  logging_policy.hpp  logging_stdio.cpp  logging_stdio.hpp
src/renderer/: CMakeLists.txt  buffer.h  device.h  graphics_interface.h  render_target.h  vertex.h
tests/: CMakeLists.txt
